Create deb package

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,4 +11,4 @@ target_link_libraries(ninjasiege ninja ${SYSTEM_LIBRARIES})
 install(TARGETS ninjasiege DESTINATION ninja/bin)
 install(PROGRAMS ${SYSTEM_DIR}/ninjasiege DESTINATION .)
 install(DIRECTORY ${SYSTEM_BIN_DIR}/lib/ DESTINATION ninja/lib)
-install(DIRECTORY ${ROOT_DIR}/resources DESTINATION ninja/)
+install(DIRECTORY ${ROOT_DIR}/media DESTINATION ninja/)
