--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -88,6 +88,7 @@ set(CPACK_PACKAGE_VERSION_MAJOR "1")
 set(CPACK_PACKAGE_VERSION_MINOR "0")
 set(CPACK_PACKAGE_VERSION_PATCH "1")
 set(CPACK_PACKAGE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/COPYING")
+set(CPACK_DEBIAN_PACKAGE_MAINTAINER "LVDJ - Laboratório Virtual de Desenvolvimento de Jogos")
 
 set(CPACK_PACKAGING_INSTALL_PREFIX "/usr/games")
 set(CPACK_GENERATOR "DEB")
