--- a/Makefile.windows
+++ b/Makefile.windows
@@ -1,11 +1,11 @@
 export PLATFORM=windows
 
 # Compiler setup
-export CC=runcl.bat
-export CFLAGS=/W4 /nologo /EHsc
+export CC=x86_64-w64-mingw32-g++.exe
+export CFLAGS=-W -Wall -Werror -std=c++11
 
-RELEASE_CFLAGS=/O2
-DEBUG_CFLAGS=/Zi /Od
+RELEASE_CFLAGS=-O2
+DEBUG_CFLAGS=-g -O0
 
 ifeq ($(MODE),debug)
 	CFLAGS+=$(DEBUG_CFLAGS)
@@ -14,28 +14,26 @@ else
 endif
 
 # Tools
-export AR=runlib.bat
-export LINKER=runlink.bat
+export AR=x86_64-w64-mingw32-ar.exe
+export AR_FLAGS=rcs
+export LINKER=x86_64-w64-mingw32-g++.exe
 
 # Environment variables
-export INCLUDES_FLAG=/I 
-export LIBPATH_FLAG=/LIBPATH:
-export EXT_LIBPATH_FLAG=/LIBPATH:
-export LIBS_FLAG=
-export EXT_LIBS_FLAG=
-export OBJ_OUTPUT_FLAG=/Fo:
-export AR_OUTPUT_FLAG=/OUT:
-export OUTPUT_FLAG=/OUT:
-export GEN_OBJECT_FLAG=/c
-export STATIC_LIB_EXTENSION=.lib
-export STATIC_LIB_PREFIX=
-export STATIC_LIB_SUFFIX=.lib
-export EXTERNAL_LIB_SUFFIX=.lib
-export OBJ_EXTENSION=.obj
-export CYGWIN_VOLUME=/cygdrive/d/
-export WINDOWS_VOLUME=D:/
+export INCLUDES_FLAG=-I
+export LIBPATH_FLAG=-L
+export EXT_LIBPATH_FLAG=-L
+export LIBS_FLAG=-l
+export EXT_LIBS_FLAG=-l
+export OBJ_OUTPUT_FLAG=-o
+export AR_OUTPUT_FLAG=
+export OUTPUT_FLAG=-o
+export GEN_OBJECT_FLAG=-c
+export STATIC_LIB_EXTENSION=.a
+export STATIC_LIB_PREFIX=lib
+export STATIC_LIB_SUFFIX=
+export OBJ_EXTENSION=.o
 
 # Platform specific libs
-export EXTRA_LIBS=SDLmain.lib
+export EXTRA_LIBS=
 
 include Makefile.common
