Fix wxs generation

--- a/metadata.ini
+++ b/metadata.ini
@@ -12,4 +12,4 @@ EXECUTABLE_NAME=ninjaSiege
 MAINTAINER_NAME="UnB Games"
 MAINTAINER_CONTACT="parley@outlook.com"
 
-ICON_FILE="icon.bmp"
+ICON_FILE="icon.ico"
